# resolwe-bio-py

./: Jenkinsfile  codecov.yml  pyproject.toml  quick_test_qc_tables.py  setup.cfg  setup.py  test_meta.py  tox.ini
.github/workflows/: ci.yaml  e2e.yaml
docs/: CHANGELOG.rst  creating_data.rst  index.rst  intro.rst  pipelines.rst  ref.rst
docs/files/: resdk-example.py  start.py  tutorial-create.py
resdk/: query.py  resolwe.py  scripts.py
resdk/analysis/: chip_seq.py  plots.py
resdk/data_upload/: annotate_samples.py  samplesheet.py
resdk/resources/: data.py  relation.py  sample.py
resdk/tests/: test_base.py  test_resolwe.py
resdk/tests/files/: annotation_spreadsheet.xlsm
resdk/tests/functional/: base.py  e2e_resolwe.py
resdk/tests/functional/analysis/: e2e_chip_seq.py
resdk/tests/functional/data_upload/: e2e_upload.py
resdk/tests/functional/filters/: e2e_filtering.py
resdk/tests/functional/resolwe/: e2e_resolwe.py
resdk/tests/unit/: test_resolwe.py
resolwe_api/: __about__.py  resolwe.py  scripts.py  utils.py
scripts/: sequp.py  temp.py
src/resdk/: collection_tables.py  query.py  resdk_logger.py  resolwe.py
src/resdk/resources/: __init__.py  annotations.py  background_task.py  base.py  collection.py  data.py  descriptor.py  fields.py  geneset.py  metadata.py  predictions.py  process.py  relation.py  sample.py  serializer.py  variants.py
src/resdk/resources/kb/: feature.py  mapping.py
src/resdk/shortcuts/: collection.py
src/resdk/tables/: __init__.py  base.py  qc.py  qc_mappings.py  rna.py
tests/functional/docs/: e2e_docs.py
tests/functional/tables/: e2e_tables.py
tests/unit/: test_base.py  test_collection.py  test_collections_shortcuts.py  test_data.py  test_geneset.py  test_metadata.py  test_relations.py  test_resolwe.py  test_sample.py  test_tables.py  test_utils.py
