[build-system]
requires = [
    "setuptools >= 80.9.0",
    "setuptools_scm >= 9.2.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "resdk"
description = "Resolwe SDK for Python"
authors = [
    {name = "Genialis, Inc", email = "dev-team@genialis.com"},
]
dynamic = ["version"]
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9, <3.15"
keywords = [
    "bio",
    "bioinformatics",
    "dataflow",
    "django",
    "pipelines",
    "python",
    "resolwe",
    "sdk",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.13.2",
    "requests",
    "urllib3>=2;python_version >= '3.10'",
    "slumber>=0.7.1",
    "wrapt",
    "pytz",
    "tzlocal",
    "pandas",
    "tqdm",
    "openpyxl",
    "xlrd",
    "boto3[crt]",
    "boto3-stubs[s3]",
    "packaging",
]
[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    # TODO: Consider using sphinx-pyproject in the future. At the time of this
    # writing the missing feature was disability of sphinx-pyproject to detect
    # dynamic project version
]
package = [
    "twine",
    "check-manifest",
    "build",
]
test = [
    "black==25.11.0",
    "flake8",
    "isort",
    "mock",
    "pydocstyle[toml]",
    "pytest-cov",
    "types-tqdm",
    "types-slumber",
]
[project.urls]
repository = "https://github.com/genialis/resolwe-bio-py/"
documentation = "https://resdk.readthedocs.io/en/latest/"

[tool.setuptools_scm]

[tool.black]
target-version = ["py39", "py310", "py311", "py312", "py313", "py314"]

[tool.pydocstyle]
add-select = "D404"
add-ignore = "D202"

[tool.isort]
profile = "black"
